<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F0F0F0"
        tools:context=".AlpageDetails"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/alpagede"
            android:textColor="#FFFFFF"
            android:textSize="30dp"
            android:background="@drawable/rounded_edittext"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/m2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adresse"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="18dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/m2_details_house"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="right"
                android:inputType="textPersonName"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telephone"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/price_details_house"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/horaires"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horairesdevente"
                android:textColor="#000000"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/horaires_edittext"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:inputType="textPersonName"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="#000000" />

        </LinearLayout>


        <CheckBox android:id="@+id/degustation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textColorHint="#000000"
            android:hint="@string/buv"
            android:layout_marginTop="24dp"
            android:onClick="degustation"/>

        <CheckBox android:id="@+id/pointdevente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textColorHint="#000000"
            android:hint="@string/pointdevente"
            android:onClick="pointdevente"/>

        <TextView
            android:id="@+id/titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autresproduits"
            android:textColor="#000000"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="35dp" />

        <CheckBox android:id="@+id/beurre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textColorHint="#000000"
            android:hint="@string/beurre"
            android:onClick="beurre"/>

        <CheckBox android:id="@+id/creme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textColorHint="#000000"
            android:hint="@string/creme"
            android:onClick="creme"/>

        <CheckBox android:id="@+id/serac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textColorHint="#000000"
            android:hint="@string/serac"
            android:onClick="serac"/>

        <CheckBox android:id="@+id/yogurt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textColorHint="#000000"
            android:hint="@string/yogurt"
            android:onClick="yogurt"/>

        <Button
            android:id="@+id/button_save"
            android:layout_width="140dp"
            android:textStyle="bold"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:text="@string/notrefromage"
            android:onClick="notrefromage"
            android:background="@drawable/rounded_edittext"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp" />

    </LinearLayout>

    <!-- Navigation Drawer -->
    <android.support.design.widget.NavigationView
        android:id="@+id/navigationdrawer_alpagedetails"
        app:headerLayout="@layout/navigation_header"
        android:layout_width="220dp"
        android:layout_height="match_parent"
        app:menu="@layout/navigation_item"
        android:layout_gravity="start"
        android:foregroundGravity="center"/>

</android.support.v4.widget.DrawerLayout>