<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F0F0F0"
        tools:context=".FromageDetails"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/nomfromage"
            android:textColor="#FFFFFF"
            android:textSize="30dp"
            android:background="@drawable/rounded_edittext"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"/>

        <ImageView
            android:id="@+id/swiss"
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:src="@mipmap/radar" />



        <CheckBox android:id="@+id/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/main"
            android:textColorHint="#000000"
            android:layout_marginLeft="16dp"
            android:onClick="main"/>

        <CheckBox android:id="@+id/raclette"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/raclette"
            android:textColorHint="#000000"
            android:layout_marginLeft="16dp"
            android:onClick="raclette"/>

        <CheckBox android:id="@+id/cuisson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cuisson"
            android:textColorHint="#000000"
            android:layout_marginLeft="16dp"
            android:onClick="cuisson"/>

    </LinearLayout>

    <!-- Navigation Drawer -->
    <android.support.design.widget.NavigationView
        android:id="@+id/navigationdrawer_fromagedetails"
        app:headerLayout="@layout/navigation_header"
        android:layout_width="220dp"
        android:layout_height="match_parent"
        app:menu="@layout/navigation_item"
        android:layout_gravity="start"
        android:foregroundGravity="center"/>

</android.support.v4.widget.DrawerLayout>